# Aircore

./: README.md  mqtt_esp8266_AIRCORE.ino  robotArm_2026.ino  로봇팔c#.resx
pkg 2/: CMakeLists.txt  README.md  README_NAV2.md  SLAM_GUIDE.md  package.xml
pkg 2/Car/: README_NAV2.md
pkg 2/Car/config/: nav2_params.yaml
pkg 2/Car/launch/: localization.launch.py  nav2.launch.py
pkg 2/Car/scripts/: wander.py
pkg 2/config/: aircore.rviz  bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml
pkg 2/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  localization.launch.py  rviz.launch.py  slam.launch.py  wander.launch.py
pkg 2/maps/: aircore_map.pgm  aircore_map.yaml
pkg 2/meshes/: base_link.stl  battery.stl  driver.stl  floor_2.stl  floor_3.stl  jetson_nano.stl  left_support_wheel.stl  left_wheel.stl  lidar.stl  right_support_wheel.stl  right_wheel.stl  stmf407.stl  support_1_1.stl  support_1_2.stl  support_1_3.stl  support_1_4.stl  support_2_1.stl  support_2_2.stl  support_2_3.stl  support_2_4.stl
pkg 2/scripts/: gen_fake_map.py  wander.py
pkg 2/urdf/: aircore.gazebo  aircore.trans  aircore.xacro  materials.xacro
pkg 2/worlds/: aircore_world.sdf
robotArm/: robotArm.ino
전공동아리_URDF/: RPlidar_C1_Guide.md  rplidar_c1.urdf  rplidar_c1.urdf.xacro  rplidar_c1_example.urdf  rplidar_config.rviz  rplidar_hardware.launch  rplidar_sim.launch
